[package]
name = "angry"
version = "0.1.0"
edition = "2021"
author = "Gobias"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0.8", features = ["wrap_help", "cargo"] }
futures = "0.3"
