[package]
name = "angry"
version = "0.1.0"
edition = "2021"
author = "Gobias"
repository = "https://github.com/epi052/feroxbuster"
description = "An async content discovery tool written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.1.4", features = ["derive"] }
futures = "0.3"
anyhow = "1.0.69"
